Fix overflow on search feature

--- a/src/sass/layout/_found-gifs.scss
+++ b/src/sass/layout/_found-gifs.scss
@@ -28,7 +28,7 @@
       height: 120px;
       position: relative;
 
-      overflow-x: hidden;
+      overflow: hidden;
 
       .found-gifs__gif {
         width: 100%;
